# ChangeLog for net-misc/kvpnc
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/kvpnc/ChangeLog,v 1.20 2006/06/10 23:03:01 voxus Exp $

*kvpnc=0.8.5.1 (11 Jun 2006)

  11 Jun 2006; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.8.5.1.ebuild:
  Version bump, thanks to CSights for a reminder.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-kvpnc-0.7.2,
  files/digest-kvpnc-0.8, files/digest-kvpnc-0.8.1, Manifest:
  Fixing SHA256 digest, pass four

*kvpnc-0.8.3 (26 Mar 2006)

  26 Mar 2006; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.8.3.ebuild:
  Version bump, closes bug #126656.

*kvpnc-0.8.2.1 (12 Feb 2006)

  12 Feb 2006; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.8.2.1.ebuild:
  Version bump, closes bug #122584.

  03 Feb 2006; Markus Rothe <corsair@gentoo.org> kvpnc-0.8.1.ebuild:
  Added ~ppc64

  12 Nov 2005; Jason Wever <weeve@gentoo.org> kvpnc-0.8.1.ebuild:
  Added ~sparc keyword wrt bug #112330.

*kvpnc-0.8.1 (13 Nov 2005)

  13 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.8.1.ebuild:
  Version bump, closing bug #112330. Sparc keyword dropped due to new
  crpyto++ dependency.

  30 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> -kvpnc-0.7.ebuild,
  kvpnc-0.7.2.ebuild, kvpnc-0.8.ebuild:
  Goes stable on x86.

*kvpnc-0.8 (14 Oct 2005)

  14 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.8.ebuild:
  Version bump, closing bug #108668.

*kvpnc-0.7.2 (17 Jul 2005)

  17 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.7.2.ebuild:
  Version bump.

  10 Jul 2005; Jason Wever <weeve@gentoo.org> kvpnc-0.7.ebuild:
  Added ~sparc keyword.

  02 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org> kvpnc-0.4.1.2.ebuild,
  kvpnc-0.6.1.ebuild, kvpnc-0.7.ebuild:
  Added ~amd64 keyword, stabilized on x86.

*kvpnc-0.7 (14 Jun 2005)

  14 Jun 2005; Konstantin Arkhipov <voxus@gentoo.org> +kvpnc-0.7.ebuild:
  Version bump.

*kvpnc-0.4.1.2 (06 May 2005)
