@@ -1,0 +1,3 @@
+MD5 8f4aa899b0cbb29914db39cc6f7f1451 kvpnc-0.8.6.1.tar.bz2 1894558
+RMD160 f0e1e29530bc2c3f30fb26c2784c0a832485ea5a kvpnc-0.8.6.1.tar.bz2 1894558
+SHA256 8ff03471dc8a13c9007ca93bb46711154aaa639191c45d753d127bcdfdf065ed kvpnc-0.8.6.1.tar.bz2 1894558
